--- a/crm-backend/.gitignore
+++ b/crm-backend/.gitignore
@@ -1,5 +1,11 @@
 node_modules/
 .env
+.env.local
+.env.*.local
+.env.production.local
+.env.development.local
+.env.test.local
+
 coverage/
 .DS_Store
 .vscode/
@@ -7,11 +13,36 @@ npm-debug.log
 yarn-error.log
 .idea/
 dist/
+build/
 .env.test
-.env.local
-.env.production
-.env.development.local
-.env.test.local
-.env.production.local
 .cache/
 logs/
+*.log
+
+# IDE
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+*.swp
+*.swo
+*~
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# OS
+Thumbs.db
+
+# Development
+.local
+temp/
+.turbo/
+.eslintcache
+
+# Production
+/out/
