--- a/crm-frontend/package.json
+++ b/crm-frontend/package.json
@@ -11,21 +11,21 @@
   "dependencies": {
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
-    "next": "16.1.1",
-    "react": "19.2.3",
+    "next": "^16.1.6",
+    "react": "^19.2.4",
     "react-chartjs-2": "^5.3.1",
-    "react-dom": "19.2.3",
+    "react-dom": "^19.2.4",
     "react-icons": "^5.5.0",
     "styled-components": "^6.3.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.1.1",
+    "@types/node": "^25.2.3",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
+    "eslint": "^10.0.0",
+    "eslint-config-next": "^16.1.6",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   }
 }
